--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .cuerpo{
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
 align-items: center;
@@ -62,4 +63,15 @@ align-items: center;
 }
 .popup button{
   margin:10px
+}
+
+
+
+@media (max-width: 662px){
+  .cuadro1 {
+    height: 240px;
+    width: 360px;
+
+  }
+
 }
