--- a/src/assets/styles/NavBar.css
+++ b/src/assets/styles/NavBar.css
@@ -8,5 +8,6 @@ ul {
     justify-content: space-around;
     align-items: center;
     margin-top: 0px;
+    margin-bottom: 0px;
     padding: 5px;
 }
