--- a/src/assets/styles/ContactForm.css
+++ b/src/assets/styles/ContactForm.css
@@ -1,12 +1,38 @@
 .formulario {
-    background-color: white;
+    background-color: rgb(243, 241, 241);
     display: flex;
    flex-direction: column;
-   text-align: center;
-   align-items: center;
+   text-align: left;
+   align-items: left;
    gap: 8px;
+   margin-bottom: 50px;
+   border-radius: 10px;
+   padding: 30px;
+   box-shadow: 4px 3px 10px rgb(56, 55, 55);
 
 }
+.formulario input{
+border-radius: 2px;
+border:1px;
+width: 200px;
+box-shadow: 1px 1px 3px rgb(56, 55, 55)
+
+
+}
+
 .formulario label{
     margin-right: 10px;
+
+}
+.formulario div{
+    display: flex;
+    justify-content:space-between
+}
+.formulario textarea{
+    width: 200px;
+    height: 100px;
+    border-radius: 2px;
+    border-radius: 2px;
+    border:1px;
+    box-shadow: 1px 1px 3px rgb(56, 55, 55)
 }
